Added Death Filter

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,10 @@
     <button id="zoomInBtn">+</button>
     <button id="zoomOutBtn">-</button>
 
+    <label for="filterNone">Show All</label><input type="radio" value="" name="filter" id="filterNone" checked="checked"/>
+    <label for="filterDeath">Show Deaths</label><input type="radio" value="Died" name="filter"
+                                               id="filterDeath"/>
+
 </div>
 
 <div id="container">
