--- a/public/static/index.html
+++ b/public/static/index.html
@@ -167,7 +167,7 @@
     
 </body>
 
-<script src="dist/bundle.js"></script>
+<script src="../dist/bundle.js"></script>
 <script src="js/rectangleOverlays.js"></script>
 <script src="js/rectangles.js"></script>
 <script src="js/touchEvts.js"></script>
