--- a/scrap/d3/index.html
+++ b/scrap/d3/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Convict Test</title>
-    <script src="../bundle.js"></script>
+    <script src="../../public/dist/bundle.js"></script>
     <link rel="stylesheet" href="index.css" type="text/css">
 </head>
 <body>
